--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ profile
 # NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
 
 *~.nib
+
+
 ####
 # Xcode build files -
 #
@@ -58,6 +60,8 @@ build/
 !default.pbxuser
 !default.mode1v3
 !default.mode2v3
+!default.perspectivev3
+
 
 ####
 # Xcode 4 - semi-personal settings, often included in workspaces
@@ -110,3 +114,4 @@ xcuserdata
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
